--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,11 @@ jupyterlite-pyodide-kernel==0.3.1
 # JavaScript kernel (optional)
 jupyterlite-javascript-kernel==0.3.0
 
+
+# Support for fromURL="https://raw.githubusercontent.com/...."
+jupyterlab-open-url-parameter==0.3.0
+
+
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
 jupyterlab-language-pack-zh-CN
